POWR-417 Fix IE text wrapping issue in alerts

--- a/web/themes/custom/cloudy/css/style.css
+++ b/web/themes/custom/cloudy/css/style.css
@@ -29,7 +29,7 @@ h3, .h3 {
   font-size: 1.42383rem; }
 
 h4, .h4 {
-  font-size: 1.26562rem; }
+  font-size: 1.26563rem; }
 
 h5, .h5 {
   font-size: 1.125rem; }
@@ -8355,3 +8355,8 @@ span.mailto::before {
 
 .view-top-searches .item-list ul li:last-child {
   padding-right: 0; }
+
+/* IE 11 hack to fix text wrapping issue in alerts caused by overflow bug in nested flex containers 
+  https://github.com/philipwalton/flexbugs/issues/170 */
+_:-ms-fullscreen, :root .row.region-top-header {
+  display: block; }
